migliorato aspetto calendario

--- a/cal.html
+++ b/cal.html
@@ -74,58 +74,58 @@
                                 <th>DOM</th>
                             </tr>
                             <tr>
-                                <td id="1_1" class="no-mo">29</td>
-                                <td id="1_2" class="no-mo">30</td>
-                                <td id="1_3">1</td>
-                                <td id="1_4">2</td>
-                                <td id="1_5">3</td>
-                                <td id="1_6">4</td>
-                                <td id="1_7">5</td>
+                                <td id="1_1" class="no-mo day-lf"><p>29</p></td>
+                                <td id="1_2" class="no-mo day-lf"><p>30</p></td>
+                                <td id="1_3" class="day-lf"><p>1</p></td>
+                                <td id="1_4" class="day-mi"><p>2</p></td>
+                                <td id="1_5" class="day-ri"><p>3</p></td>
+                                <td id="1_6" class="day-ri"><p>4</p></td>
+                                <td id="1_7" class="day-ri"><p>5</p></td>
                             </tr>
                             <tr>
-                                <td id="2_1">6</td>
-                                <td id="2_2">7</td>
-                                <td id="2_3">8</td>
-                                <td id="2_4">9</td>
-                                <td id="2_5">10</td>
-                                <td id="2_6">11</td>
-                                <td id="2_7">12</td>
+                                <td id="2_1" class="day-lf"><p>6</p></td>
+                                <td id="2_2" class="day-lf"><p>7</p></td>
+                                <td id="2_3" class="day-lf"><p>8</p></td>
+                                <td id="2_4" class="day-mi"><p>9</p></td>
+                                <td id="2_5" class="day-ri"><p>10</p></td>
+                                <td id="2_6" class="day-ri"><p>11</p></td>
+                                <td id="2_7" class="day-ri"><p>12</p></td>
                             </tr>
                             <tr>
-                                <td id="3_1">13</td>
-                                <td id="3_2">14</td>
-                                <td id="3_3">15</td>
-                                <td id="3_4">16</td>
-                                <td id="3_5">17</td>
-                                <td id="3_6">18</td>
-                                <td id="3_7">19</td>
+                                <td id="3_1" class="day-lf"><p>13</p></td>
+                                <td id="3_2" class="day-lf"><p>14</p></td>
+                                <td id="3_3" class="day-lf"><p>15</p></td>
+                                <td id="3_4" class="day-mi"><p>16</p></td>
+                                <td id="3_5" class="day-ri"><p class="ev">17</p></td>
+                                <td id="3_6" class="day-ri"><p>18</p></td>
+                                <td id="3_7" class="day-ri"><p>19</p></td>
                             </tr>
                             <tr>
-                                <td id="4_1">20</td>
-                                <td id="4_2">21</td>
-                                <td id="4_3">22</td>
-                                <td id="4_4">23</td>
-                                <td id="4_5">24</td>
-                                <td id="4_6">25</td>
-                                <td id="4_7">26</td>
+                                <td id="4_1" class="day-lf"><p>20</p></td>
+                                <td id="4_2" class="day-lf"><p>21</p></td>
+                                <td id="4_3" class="day-lf"><p>22</p></td>
+                                <td id="4_4" class="day-mi"><p>23</p></td>
+                                <td id="4_5" class="day-ri"><p>24</p></td>
+                                <td id="4_6" class="day-ri"><p>25</p></td>
+                                <td id="4_7" class="day-ri"><p>26</p></td>
                             </tr>
                             <tr>
-                                <td id="5_1">27</td>
-                                <td id="5_2">28</td>
-                                <td id="5_3">29</td>
-                                <td id="5_4">30</td>
-                                <td id="5_5">31</td>
-                                <td id="5_6" class="no-mo">1</td>
-                                <td id="5_7" class="no-mo">2</td>
+                                <td id="5_1" class="day-lf"><p>27</p></td>
+                                <td id="5_2" class="day-lf"><p>28</p></td>
+                                <td id="5_3" class="day-lf"><p>29</p></td>
+                                <td id="5_4" class="day-mi"><p>30</p></td>
+                                <td id="5_5" class="day-ri"><p>31</p></td>
+                                <td id="5_6" class="no-mo day-ri"><p>1</p></td>
+                                <td id="5_7" class="no-mo day-ri"><p>2</p></td>
                             </tr>
                             <tr>
-                                <td id="6_1" class="no-mo">3</td>
-                                <td id="6_2" class="no-mo">4</td>
-                                <td id="6_3" class="no-mo">5</td>
-                                <td id="6_4" class="no-mo">6</td>
-                                <td id="6_5" class="no-mo">7</td>
-                                <td id="6_6" class="no-mo">8</td>
-                                <td id="6_7" class="no-mo">9</td>
+                                <td id="6_1" class="no-mo day-lf"><p>3</p></td>
+                                <td id="6_2" class="no-mo day-lf"><p>4</p></td>
+                                <td id="6_3" class="no-mo day-lf"><p>5</p></td>
+                                <td id="6_4" class="no-mo day-mi"><p>6</p></td>
+                                <td id="6_5" class="no-mo day-ri"><p>7</p></td>
+                                <td id="6_6" class="no-mo day-ri"><p>8</p></td>
+                                <td id="6_7" class="no-mo day-ri"><p>9</p></td>
                             </tr>
                         </tbody>
                     </table>
