--- a/opt.html
+++ b/opt.html
@@ -44,7 +44,7 @@
                 <td>Ripeti</td><td><input class="campo" type="password" name="new_2_pw" maxlength="20" required></td>
             </tr>
             <tr>
-                <td colspan="2"><input type="button" value="Salva"></td>
+                <td colspan="2" class="btn"><input type="button" value="Salva"></td>
             </tr>
             </form>
             <form method="post" action="">
@@ -58,7 +58,7 @@
                 <td>Nuova E-mail</td><td><input type="email" required</td>
             </tr>
             <tr>
-                <td colspan="2"><input type="button" value="Salva"></td>
+                <td colspan="2" class="btn"><input type="button" value="Salva"></td>
             </tr>
             </form>
         </table>
