sistemato css ridotto definitivo

--- a/cal.html
+++ b/cal.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>Calendario</title>
+<link href="css/global.css" rel="stylesheet" type="text/css">
 <link href="css/bar_style.css" rel="stylesheet" type="text/css">
 <link href="css/cal_style.css" rel="stylesheet" type="text/css">
 </head>
@@ -132,6 +133,7 @@
                 </div>
             </div>
         </div> 
+        <div id="push_100"></div>
     </div>
 </body>
 <script async src="js/logic.js"></script>
