--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>Login</title>
+<link href="css/global.css" rel="stylesheet" type="text/css">
 <link href="css/login_style.css" rel="stylesheet" type="text/css">
 </head>
 <body>  
@@ -38,7 +39,7 @@
             </table>
         </div>
     </div>
-    <div id="push"></div>   
+    <div id="push_100"></div>   
     <footer>
         <p>Progetto LTW Davide Di Campi e Tiziano Colagrossi &copy; 2018</p>    
     </footer>
