--- a/pwlost.html
+++ b/pwlost.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>Recupero	 password</title>
+<link href="css/global.css" rel="stylesheet" type="text/css">
 <link href="css/pwlost_style.css" rel="stylesheet" type="text/css">
 </head>
 
@@ -40,7 +41,7 @@
             </div>
             
         </div>
-        <div id="push"></div>
+        <div id="push_100"></div>
         <footer>
             <img src="img/footg.png" alt="footer_img">
         </footer>
