--- a/recpw_success.html
+++ b/recpw_success.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>Success</title>
+<link href="css/global.css" rel="stylesheet" type="text/css">
 <link href="css/success_style.css" rel="stylesheet" type="text/css">
 </head>
 <body>  
