--- a/reg_success.html
+++ b/reg_success.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>Success</title>
+<link href="css/global.css" rel="stylesheet" type="text/css">
 <link href="css/success_style.css" rel="stylesheet" type="text/css">
 </head>
 <body>  
@@ -22,7 +23,7 @@
 	    		</article>
 	    	</div>
     	</div>
-    	<div id="push"></div>   
+    	<div id="push_100"></div>   
     	<footer>
 	    	<p>Progetto LTW Davide Di Campi e Tiziano Colagrossi &copy; 2018</p>    
 	    </footer>
