--- a/registrati.html
+++ b/registrati.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>Registrazione</title>
+<link href="css/global.css" rel="stylesheet" type="text/css">
 <link href="css/reg_style.css" rel="stylesheet" type="text/css">
 </head>
 
@@ -52,7 +53,7 @@
                 Inserire il nome e il cognome, nel campo CID va inserito il codice della carta di identit&agrave, l'e-mail verra usata per avvisarvi di eventuali votazioni future e per il recupero dell'account in caso di smarrimento delle credenziali.
             </p>
         </div>
-        <div id="push"></div>
+        <div id="push_100"></div>
         <footer>
             <img src="img/footg.png" alt="footer_img">
         </footer>
