--- a/scheda_elettorale.html
+++ b/scheda_elettorale.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>Scheda</title>
+<link href="css/global.css" rel="stylesheet" type="text/css">
 <link href="css/bar_style.css" rel="stylesheet" type="text/css">
 <link href="css/tes_style.css" rel="stylesheet" type="text/css">
 </head>
@@ -236,10 +237,7 @@
                 </table>
             </form>
         </div>
-        <div id="push"></div>
-        <!-- <footer>
-            <img src="img/footg.png" alt="footer_img">
-        </footer>-->
+        <div id="push_100"></div>
     </div>    
 </body>
 <script async src="js/scheda_elettorale.js"></script>
