--- a/opt.html
+++ b/opt.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>Opzioni</title>
+<link href="css/global.css" rel="stylesheet" type="text/css">
 <link href="css/bar_style.css" rel="stylesheet" type="text/css">
 <link href="css/opt_style.css" rel="stylesheet" type="text/css">
 </head>
@@ -55,14 +56,15 @@
             <tr>
             </tr>
             <tr>
-                <td>Nuova E-mail</td><td><input type="email" required</td>
+                <td>Nuova E-mail</td><td><input type="email" required></td>
             </tr>
             <tr>
                 <td colspan="2" class="btn"><input type="button" value="Salva"></td>
             </tr>
             </form>
         </table>
-    </div> 
+    </div>
+    <div id="push_100"></div>
     </div>
 </body>
 <script async src="js/logic.js"></script>
