--- a/profilo.html
+++ b/profilo.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>Utente</title>
+<link href="css/global.css" rel="stylesheet" type="text/css">
 <link href="css/bar_style.css" rel="stylesheet" type="text/css">
 <link href="css/profilo_style.css" rel="stylesheet" type="text/css">
 </head>
