Changes to be committed: 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
             <h1>Accedi per votare</h1>
             <table>
                 <form method="post" action="" name="login">
-                    <tr><td><input type="text" name="name" placeholder="ID" maxlength="16"></td><td><input type="password" name="password" placeholder="Password" maxlength="20"></td></tr>
+                    <tr><td><input type="text" name="name" placeholder="CID" maxlength="16"></td><td>
+                    		<input type="password" name="password" placeholder="Password" maxlength="20" onkeypress="if(event.keyCode==13){log_in()}" ></td></tr>
             	    <tr>
                         <td colspan="2">
                             <input class="btn" type="button" name="Accedi" value="Accedi" onClick="log_in()"> 
