Changes to be committed: 	modified:   js/logic.js 	modified:   profilo.html

--- a/profilo.html
+++ b/profilo.html
@@ -31,7 +31,7 @@
                 <img src="img/256px-Default_profile_picture.jpg">
                 <figcaption>
                     <h1>Nome Cognome</h1>
-                    <h2>ID: XXDDDDDDD</h2><h2>MUNICIPIO: XX</h2>
+                    <h2>ID: <script>JSON.parse(localStorage.getItem('logged_user))[0]</script></h2><h2>MUNICIPIO: XX</h2>
                 </figcaption>
             </header>
                 <h1>News</h1>
