--- a/profilo.html
+++ b/profilo.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
+<script type="text/javascript" src='js/profile.js'> </script>
 <title>Utente</title>
 <link href="css/global.css" rel="stylesheet" type="text/css">
 <link href="css/bar_style.css" rel="stylesheet" type="text/css">
@@ -30,15 +31,11 @@
             <header>
                 <img src="img/256px-Default_profile_picture.jpg">
                 <figcaption>
-                    <h1 id="Nome"><script>document.getElementById('Nome').innerHTML=
-                    			JSON.parse(localStorage.getItem('logged_user'))[3] + " " +
-                    			JSON.parse(localStorage.getItem('logged_user'))[4]</script>
+                    <h1 id="Nome"><script>buildProfileName()</script>
                     </h1>
-                    <h2 id="CID"><script>document.getElementById('CID').innerHTML=
-                    			"ID: " + JSON.parse(localStorage.getItem('logged_user'))[0]</script>
+                    <h2 id="Cid"><script>buildProfileCid()</script>
                     </h2>
-                    <h2 id="Mun"><script>document.getElementById('Mun').innerHTML=
-                    			"MUNICIPIO: " + JSON.parse(localStorage.getItem('logged_user'))[6]</script>
+                    <h2 id="Mun"><script>buildProfileMun()</script>
                     </h2>
                 </figcaption>
             </header>
@@ -87,4 +84,5 @@
         </div>
     </div>
 </body>
+<script async src="js/profile.js"></script>
 </html>
