--- a/profilo.html
+++ b/profilo.html
@@ -31,12 +31,9 @@
             <header>
                 <img src="img/256px-Default_profile_picture.jpg">
                 <figcaption>
-                    <h1 id="Nome"><script>buildProfileName()</script>
-                    </h1>
-                    <h2 id="Cid"><script>buildProfileCid()</script>
-                    </h2>
-                    <h2 id="Mun"><script>buildProfileMun()</script>
-                    </h2>
+                    <h1 id="Nome"><script>buildProfileName()</script></h1>
+                    <h2 id="Cid"><script>buildProfileCid()</script></h2>
+                    <h2 id="Mun"><script>buildProfileMun()</script></h2>
                 </figcaption>
             </header>
                 <h1>News</h1>
