--- a/cal.html
+++ b/cal.html
@@ -24,7 +24,7 @@
             <a href="scheda_elettorale.html"><div class="icobarcont" id="votebg">
                 <div class="icobar" id="vote"></div>
             </div></a>
-            <a href="index.html"><div class="icobarcont" id="logoutbg">
+            <a href="index.html" onclick="log_out()"><div class="icobarcont" id="logoutbg">
                 <div class="icobar" id="logout"></div>
             </div></a>
             </nav> 
