Changes to be committed: 	modified:   cal.html 	modified:   css/cal_style.css 	modified:   js/cal.js 	modified:   js/logic.js

--- a/cal.html
+++ b/cal.html
@@ -59,9 +59,9 @@
             </div>
             <div class="calendario">
                 <div class="tb_h">
-                    <div class="ar-bk"></div>
+                    <div class="ar-bk" onclick="prevMonth()"></div> </a> 
                     <div class="mo" id="mese"><script>buildMonth()</script></div>
-                    <div class="ar-fo"></div>
+                    <div class="ar-fo" onclick="nextMonth()"></div>
                 </div>
                 <div>
                     <table width="100%" border="0">
