Changes to be committed: 	modified:   cal.html 	modified:   js/cal.js

--- a/cal.html
+++ b/cal.html
@@ -60,7 +60,7 @@
             <div class="calendario">
                 <div class="tb_h">
                     <div class="ar-bk" onclick="prevMonth()"></div> </a> 
-                    <div class="mo" id="mese"><script>buildMonth()</script></div>
+                    <div class="mo" id="mese"></div>
                     <div class="ar-fo" onclick="nextMonth()"></div>
                 </div>
                 <div>
@@ -129,6 +129,7 @@
                                 <td id="6_6" class="no-mo day-ri"><p>8</p></td>
                                 <td id="6_7" class="no-mo day-ri"><p>9</p></td>
                             </tr>
+                            <script>buildMonth()</script>
                         </tbody>
                     </table>
                 </div>
