--- a/scheda_elettorale.html
+++ b/scheda_elettorale.html
@@ -28,6 +28,7 @@
     </nav>
     <div id="cont">
         <div id="main_content">
+            <img src="img/cancelled-stamp.png" class="timbro">
             <h1 id="ht">Scheda elettorale</h1>
             <form name="voto" method="post" action="">
                 <table>
