aggiunto referendum e timbro dopo votazione da sistemare

--- a/profilo.html
+++ b/profilo.html
@@ -22,6 +22,9 @@
         <a href="scheda_elettorale.html"><div class="icobarcont" id="votebg">
             <div class="icobar" id="vote"></div>
         </div></a>
+        <a href="referendum.html"><div class="icobarcont" id="votebg">
+            <div class="icobar" id="vote1"></div>
+        </div></a>
         <a href="index.html" onclick="log_out()"><div class="icobarcont" id="logoutbg">
             <div class="icobar" id="logout"></div>
         </div></a>
