aggiunti valori default e sistemato owerflow-x delle notizie quando si rimpiccioliscono

--- a/profilo.html
+++ b/profilo.html
@@ -34,9 +34,9 @@
             <header>
                 <img src="img/256px-Default_profile_picture.jpg">
                 <figcaption>
-                    <h1 id="Nome"><script>buildProfileName()</script></h1>
-                    <h2 id="Cid"><script>buildProfileCid()</script></h2>
-                    <h2 id="Mun"><script>buildProfileMun()</script></h2>
+                    <h1 id="Nome"><script>buildProfileName()</script>Nome Cognome</h1>
+                    <h2 id="Cid"><script>buildProfileCid()</script>Carta ID: AX0000000</h2>
+                    <h2 id="Mun"><script>buildProfileMun()</script>Municipio: XX</h2>
                 </figcaption>
             </header>
                 <h1>News</h1>
