nuovo timbro piu modifica alla scheda elettorale e referendum

--- a/scheda_elettorale.html
+++ b/scheda_elettorale.html
@@ -22,7 +22,7 @@
         <a href="scheda_elettorale.html"><div class="icobarcontactive" id="votebg">
             <div class="icobar" id="vote"></div>
         </div></a>
-        <a href="referendum.html"><div class="icobarcont" id="votebg">
+        <a href="referendum.html"><div class="icobarcont" id="votebg1">
             <div class="icobar" id="vote1"></div>
         </div></a>
         <a href="index.html" onclick="log_out()"><div class="icobarcont" id="logoutbg">
@@ -31,7 +31,7 @@
     </nav>
     <div id="cont">
         <div id="main_content">
-            <!--<img src="img/cancelled-stamp.png" class="timbro">-->
+			<!--<div class="timbro"></div>-->
             <h1 id="ht">Scheda elettorale</h1>
             <form name="voto" method="post" action="">
                 <table>
