--- a/referendum.html
+++ b/referendum.html
@@ -32,11 +32,10 @@
     </nav>
     <div id="cont">
         <div id="main_content">
-            <!--<img src="img/cancelled-stamp.png" class="timbro">-->
+			<!--<div class="timbro"></div>-->
             <h1 id="ht">Referendum</h1>
             <div id="zona_voto">
                 <h2>TESTO ?</h2>
-                
                 <div class="center">
                     <div class="tasto">SI</div>
                     <div class="tasto">NO</div>
