--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Login</title>
+<!-- <title>Login</title> -->
+<title>i-votato?</title>
 <link href="css/global.css" rel="stylesheet" type="text/css">
 <link href="css/login_style.css" rel="stylesheet" type="text/css">
 </head>
