--- a/scheda_elettorale.html
+++ b/scheda_elettorale.html
@@ -1,11 +1,12 @@
 <!doctype html>
 <html>
 <head>
-<meta charset="utf-8">
-<title>Scheda</title>
-<link href="css/global.css" rel="stylesheet" type="text/css">
-<link href="css/bar_style.css" rel="stylesheet" type="text/css">
-<link href="css/tes_style.css" rel="stylesheet" type="text/css">
+	<meta charset="utf-8">
+	<script async type="text/javascript" src="js/scheda_elettorale.js"> </script>
+	<title>Scheda</title>
+	<link href="css/global.css" rel="stylesheet" type="text/css">
+	<link href="css/bar_style.css" rel="stylesheet" type="text/css">
+	<link href="css/tes_style.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
@@ -29,6 +30,7 @@
             <div class="icobar" id="logout"></div>
         </div></a>
     </nav>
+    <div id="id-scheda" value="00000001"> </div>
     <div id="cont">
         <div id="main_content">
 			<!--<div class="timbro"></div>-->
@@ -246,5 +248,5 @@
         <div id="push_100"></div>
     </div>    
 </body>
-<script async src="js/scheda_elettorale.js"></script>
+<!-- <script async src="js/scheda_elettorale.js"></script> -->
 </html>
