aggiunta icona close su today cal

--- a/cal.html
+++ b/cal.html
@@ -38,6 +38,9 @@
                 <div class="today">
                     <h6>OGGI</h6><br>
                     <h2 id="oggi"><script>buildToday()</script></h2>
+                    <div class="close" style="visibility: hidden">
+                        <i class="icon-close"></i>
+                    </div>
                 </div>
                 <div class="eventi">
                     <div class="evento">
@@ -62,7 +65,7 @@
             </div>
             <div class="calendario">
                 <div class="tb_h">
-                    <div class="ar-bk" onclick="prevMonth()"></div> </a> 
+                    <div class="ar-bk" onclick="prevMonth()"></div>
                     <div class="mo" id="mese"></div>
                     <div class="ar-fo" onclick="nextMonth()"></div>
                 </div>
