decommentato timpo e impostato style hydden su referendum e cheda elettorale

--- a/referendum.html
+++ b/referendum.html
@@ -32,7 +32,7 @@
     </nav>
     <div id="cont">
         <div id="main_content">
-			<!--<div class="timbro"></div>-->
+			<div class="timbro" style="visibility: hidden"></div>
             <h1 id="ht">Referendum</h1>
             <div id="zona_voto">
                 <h2>TESTO ?</h2>
