--- a/scheda_elettorale.html
+++ b/scheda_elettorale.html
@@ -33,7 +33,7 @@
     <div id="id-scheda" value="00000001"> </div>
     <div id="cont">
         <div id="main_content">
-			<!--<div class="timbro"></div>-->
+			<div class="timbro" style="visibility: hidden"></div>
             <h1 id="ht">Scheda elettorale</h1>
             <form name="voto" method="post" action="">
                 <table>
