Changes to be committed: 	modified:   js/logic.js 	modified:   js/scheda_elettorale.js 	modified:   profilo.html 	modified:   scheda_elettorale.html

--- a/profilo.html
+++ b/profilo.html
@@ -34,9 +34,12 @@
             <header>
                 <img src="img/256px-Default_profile_picture.jpg">
                 <figcaption>
-                    <h1 id="Nome"><script>buildProfileName()</script>Nome Cognome</h1>
-                    <h2 id="Cid"><script>buildProfileCid()</script>Carta ID: AX0000000</h2>
-                    <h2 id="Mun"><script>buildProfileMun()</script>Municipio: XX</h2>
+                    <h1 id="Nome">Nome Cognome</h1>
+                    <h2 id="Cid">Carta ID: AX0000000</h2>
+                    <h2 id="Mun">Municipio: XX</h2>
+                    <script>buildProfileName()</script>
+                    <script>buildProfileCid()</script>
+                    <script>buildProfileMun()</script>
                 </figcaption>
             </header>
                 <h1>News</h1>
