--- a/referendum.html
+++ b/referendum.html
@@ -34,6 +34,10 @@
         <div id="main_content">
 			<div class="timbro" style="visibility: hidden"></div>
             <h1 id="ht">Referendum</h1>
+            <div class="cont_btn bg-ws">
+                            <input type="button" value="Voto nullo" onclick="inviaVotoNullo()">
+                            <input type="button" value="Astieniti" onclick="inviaVotoAstenuto()">
+            </div>
             <div id="zona_voto">
                 <h2>TESTO ?</h2>
                 <div class="center">
