--- a/opt.html
+++ b/opt.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>Opzioni</title>
+<link rel="shortcut icon" type="image/png" href="./icons/favicon.png">
 <link href="css/global.css" rel="stylesheet" type="text/css">
 <link href="css/bar_style.css" rel="stylesheet" type="text/css">
 <link href="css/opt_style.css" rel="stylesheet" type="text/css">
