--- a/scheda_elettorale.html
+++ b/scheda_elettorale.html
@@ -4,6 +4,7 @@
 	<meta charset="utf-8">
 	<script async type="text/javascript" src="js/scheda_elettorale.js"> </script>
 	<title>Scheda</title>
+    <link rel="shortcut icon" type="image/png" href="./icons/favicon.png">
 	<link href="css/global.css" rel="stylesheet" type="text/css">
 	<link href="css/bar_style.css" rel="stylesheet" type="text/css">
 	<link href="css/tes_style.css" rel="stylesheet" type="text/css">
