--- a/cal.html
+++ b/cal.html
@@ -4,6 +4,7 @@
 <meta charset="utf-8">
 <script type="text/javascript" src='js/cal.js'> </script>
 <title>Calendario</title>
+<link rel="shortcut icon" type="image/png" href="./icons/favicon.png">
 <link href="css/global.css" rel="stylesheet" type="text/css">
 <link href="css/bar_style.css" rel="stylesheet" type="text/css">
 <link href="css/cal_style.css" rel="stylesheet" type="text/css">
