--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta charset="utf-8">
 <!-- <title>Login</title> -->
 <title>i-votato?</title>
+<link rel="shortcut icon" type="image/png" href="./icons/favicon.png">
 <link href="css/global.css" rel="stylesheet" type="text/css">
 <link href="css/login_style.css" rel="stylesheet" type="text/css">
 </head>
