--- a/registrati.html
+++ b/registrati.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>Registrazione</title>
+<link rel="shortcut icon" type="image/png" href="./icons/favicon.png">
 <link href="css/global.css" rel="stylesheet" type="text/css">
 <link href="css/reg_style.css" rel="stylesheet" type="text/css">
 </head>
