--- a/referendum.html
+++ b/referendum.html
@@ -1,14 +1,13 @@
 <!doctype html>
 <html>
 <head>
-
-<meta charset="utf-8">
-<title>Scheda</title>
-<link rel="shortcut icon" type="image/png" href="./icons/favicon.png">
-<link href="css/global.css" rel="stylesheet" type="text/css">
-<link href="css/bar_style.css" rel="stylesheet" type="text/css">
-<link href="css/tes_style.css" rel="stylesheet" type="text/css">
-
+	<script async type="text/javascript" src="js/referendum.js"> </script>
+	<meta charset="utf-8">
+	<title>Scheda</title>
+	<link rel="shortcut icon" type="image/png" href="./icons/favicon.png">
+	<link href="css/global.css" rel="stylesheet" type="text/css">
+	<link href="css/bar_style.css" rel="stylesheet" type="text/css">
+	<link href="css/tes_style.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
