Changes to be committed: 	modified:   cal.html 	modified:   js/cal.js 	modified:   js/logic.js 	modified:   js/profile.js 	modified:   js/referendum.js 	modified:   js/scheda_elettorale.js 	modified:   opt.html 	modified:   profilo.html 	modified:   referendum.html 	modified:   scheda_elettorale.html

--- a/profilo.html
+++ b/profilo.html
@@ -11,24 +11,24 @@
 </head>
 <body>
    <nav id="navbar">
-        <a href="profilo.html"><div class="icobarcontactive" id="homebg">
-            <div class="icobar" id="home"></div>
-        </div></a>
-        <a href="cal.html"><div class="icobarcont" id="calendarbg">
-            <div class="icobar" id="calendar"></div>
-        </div></a>
-        <a href="opt.html"><div class="icobarcont" id="optionbg">
-            <div class="icobar" id="option"></div>
-        </div></a>
-        <a href="scheda_elettorale.html"><div class="icobarcont" id="votebg">
-            <div class="icobar" id="vote"></div>
-        </div></a>
-        <a href="referendum.html"><div class="icobarcont" id="votebg">
-            <div class="icobar" id="vote1"></div>
-        </div></a>
-        <a href="index.html" onclick="log_out()"><div class="icobarcont" id="logoutbg">
-            <div class="icobar" id="logout"></div>
-        </div></a>
+    <a href="profilo.html"><div class="icobarcontactive" id="homebg">
+    	<div class="icobar" id="home"></div>
+    </div></a>
+    <a href="cal.html"><div class="icobarcont" id="calendarbg">
+        <div class="icobar" id="calendar"></div>
+    </div></a>
+    <a href="opt.html"><div class="icobarcont" id="optionbg">
+        <div class="icobar" id="option"></div>
+    </div></a>
+    <a href="scheda_elettorale.html"><div class="icobarcont" id="votebg">
+        <div class="icobar" id="vote"></div>
+    </div></a>
+    <a href="referendum.html"><div class="icobarcont" id="votebg">
+        <div class="icobar" id="vote1"></div>
+    </div></a>
+    <div class="icobarcont" id="logoutbg" onclick="log_out()">
+        <div class="icobar" id="logout"></div>
+    </div>
     </nav>
     <div id="cont">
         <div id="main_content">
