--- a/cal.html
+++ b/cal.html
@@ -1,37 +1,36 @@
 <!doctype html>
 <html>
 <head>
-<meta charset="utf-8">
-<script type="text/javascript" src='js/cal.js'> </script>
-<title>Calendario</title>
-<link rel="shortcut icon" type="image/png" href="./icons/favicon.png">
-<link href="css/global.css" rel="stylesheet" type="text/css">
-<link href="css/bar_style.css" rel="stylesheet" type="text/css">
-<link href="css/cal_style.css" rel="stylesheet" type="text/css">
+	<meta charset="utf-8">
+	<script type="text/javascript" src='js/cal.js'> </script>
+	<title>Calendario</title>
+	<link rel="shortcut icon" type="image/png" href="./icons/favicon.png">
+	<link href="css/global.css" rel="stylesheet" type="text/css">
+	<link href="css/bar_style.css" rel="stylesheet" type="text/css">
+	<link href="css/cal_style.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
-    
-            <nav id="navbar">
-                <a href="profilo.html"><div class="icobarcont" id="homebg">
-            <div class="icobar" id="home"></div>
-            </div></a>
-            <a href="cal.html"><div class="icobarcontactive" id="calendarbg">
-                <div class="icobar" id="calendar"></div>
-            </div></a>
-            <a href="opt.html"><div class="icobarcont" id="optionbg">
-                <div class="icobar" id="option"></div>
-            </div></a>
-            <a href="scheda_elettorale.html"><div class="icobarcont" id="votebg">
-                <div class="icobar" id="vote"></div>
-            </div></a>
-            <a href="referendum.html"><div class="icobarcont" id="votebg">
-            <div class="icobar" id="vote1"></div>
-            </div></a>
-            <a href="index.html" onclick="log_out()"><div class="icobarcont" id="logoutbg">
-                <div class="icobar" id="logout"></div>
-            </div></a>
-            </nav> 
+    <nav id="navbar">
+    <a href="profilo.html"><div class="icobarcont" id="homebg">
+    	<div class="icobar" id="home"></div>
+    </div></a>
+    <a href="cal.html"><div class="icobarcontactive" id="calendarbg">
+        <div class="icobar" id="calendar"></div>
+    </div></a>
+    <a href="opt.html"><div class="icobarcont" id="optionbg">
+        <div class="icobar" id="option"></div>
+    </div></a>
+    <a href="scheda_elettorale.html"><div class="icobarcont" id="votebg">
+        <div class="icobar" id="vote"></div>
+    </div></a>
+    <a href="referendum.html"><div class="icobarcont" id="votebg">
+        <div class="icobar" id="vote1"></div>
+    </div></a>
+    <div class="icobarcont" id="logoutbg" onclick="log_out()">
+        <div class="icobar" id="logout"></div>
+    </div>
+    </nav>
         
     <div id="cont">
         <div class="center" id="main_content">
