--- a/scheda_elettorale.html
+++ b/scheda_elettorale.html
@@ -12,29 +12,30 @@
 
 <body>
      <nav id="navbar">
-        <a href="profilo.html"><div class="icobarcont" id="homebg">
-            <div class="icobar" id="home"></div>
-        </div></a>
-        <a href="cal.html"><div class="icobarcont" id="calendarbg">
-            <div class="icobar" id="calendar"></div>
-        </div></a>
-        <a href="opt.html"><div class="icobarcont" id="optionbg">
-            <div class="icobar" id="option"></div>
-        </div></a>
-        <a href="scheda_elettorale.html"><div class="icobarcontactive" id="votebg">
-            <div class="icobar" id="vote"></div>
-        </div></a>
-        <a href="referendum.html"><div class="icobarcont" id="votebg1">
-            <div class="icobar" id="vote1"></div>
-        </div></a>
-        <a href="index.html" onclick="log_out()"><div class="icobarcont" id="logoutbg">
-            <div class="icobar" id="logout"></div>
-        </div></a>
+    <a href="profilo.html"><div class="icobarcont" id="homebg">
+    	<div class="icobar" id="home"></div>
+    </div></a>
+    <a href="cal.html"><div class="icobarcont" id="calendarbg">
+        <div class="icobar" id="calendar"></div>
+    </div></a>
+    <a href="opt.html"><div class="icobarcont" id="optionbg">
+        <div class="icobar" id="option"></div>
+    </div></a>
+    <a href="scheda_elettorale.html"><div class="icobarcontactive" id="votebg">
+        <div class="icobar" id="vote"></div>
+    </div></a>
+    <a href="referendum.html"><div class="icobarcont" id="votebg">
+        <div class="icobar" id="vote1"></div>
+    </div></a>
+    <div class="icobarcont" id="logoutbg" onclick="log_out()">
+        <div class="icobar" id="logout"></div>
+    </div>
     </nav>
     <div id="id-scheda" hidden>00000001</div>
     <div id="cont">
         <div id="main_content">
 			<div class="timbro" id="timbro" style="visibility:hidden"></div>
+			<script>x()</script>
             <h1 id="ht">Scheda elettorale</h1>
             <form name="voto" method="post" action="">
                 <table>
