PORCODDIO  Changes to be committed: 	modified:   cal.html 	modified:   js/cal.js

--- a/cal.html
+++ b/cal.html
@@ -85,7 +85,7 @@
                                 <td id="1_1" class="day-lf"></td>
                                 <td id="1_2" class="day-lf"></td>
                                 <td id="1_3" class="day-lf"></td>
-                                <td id="1_4" class="day-mi ev"></td>
+                                <td id="1_4" class="day-mi"></td>
                                 <td id="1_5" class="day-ri"></td>
                                 <td id="1_6" class="day-ri"></td>
                                 <td id="1_7" class="day-ri"></td>
@@ -103,7 +103,7 @@
                                 <td id="3_1" class="day-lf"></td>
                                 <td id="3_2" class="day-lf"></td>
                                 <td id="3_3" class="day-lf"></td>
-                                <td id="3_4" class="day-mi ev"></td>
+                                <td id="3_4" class="day-mi"></td>
                                 <td id="3_5" class="day-ri"></td>
                                 <td id="3_6" class="day-ri"></td>
                                 <td id="3_7" class="day-ri"></td>
