Changes to be committed: 	modified:   cal.html 	modified:   js/cal.js

--- a/cal.html
+++ b/cal.html
@@ -42,8 +42,8 @@
                         <i class="icon-close"></i>
                     </div>
                 </div>
-                <div class="eventi">
-                    <div class="evento">
+                <div id="event-container" class="eventi">
+                    <!--<div class="evento">
                         <div class="day"><p class="tcv">07<br>LUG</p></div><div class="info"><p>Lorem ipsum dolor sit amet, consectetur adipiscing.</p></div>
                     </div>
                     <div class="evento">
@@ -61,6 +61,7 @@
                     <div class="evento">
                         <div class="day"><p class="tcv">22<br>DIC</p></div><div class="info"><p>Fine lezioni</p></div>
                     </div>
+                    -->
                 </div>
             </div>
             <div class="calendario">
