Changes to be committed: 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <!-- <title>Login</title> -->
-<title>i-votato?</title>
+<title>i-Votato?</title>
 <link rel="shortcut icon" type="image/png" href="./icons/favicon.png">
 <link href="css/global.css" rel="stylesheet" type="text/css">
 <link href="css/login_style.css" rel="stylesheet" type="text/css">
