Changes to be committed: 	modified:   cal.html 	modified:   js/cal.js

--- a/cal.html
+++ b/cal.html
@@ -38,30 +38,12 @@
                 <div class="today">
                     <h6>OGGI</h6><br>
                     <h2 id="oggi"><script>buildToday()</script></h2>
-                    <div class="close" style="visibility: hidden">
+                    <div class="close" id="close" style="visibility: hidden">
                         <i class="icon-close"></i>
                     </div>
                 </div>
                 <div id="event-container" class="eventi">
-                    <!--<div class="evento">
-                        <div class="day"><p class="tcv">07<br>LUG</p></div><div class="info"><p>Lorem ipsum dolor sit amet, consectetur adipiscing.</p></div>
-                    </div>
-                    <div class="evento">
-                        <div class="day"><p class="tcv">15<br>AGO</p></div><div class="info"><p>Lorem ipsum dolor sit amet, consectetur adipiscing.</p></div>
-                    </div>
-                    <div class="evento">
-                        <div class="day"><p class="tcv">09<br>SET</p></div><div class="info"><p>Lorem ipsum dolor sit amet, consectetur adipiscing.</p></div>
-                    </div>
-                    <div class="evento">
-                        <div class="day"><p class="tcv">20<br>OTT</p></div><div class="info"><p>Lorem ipsum dolor sit amet, consectetur adipiscing.</p></div>
-                    </div>
-                    <div class="evento">
-                        <div class="day"><p class="tcv">30<br>NOV</p></div><div class="info"><p>Lorem ipsum dolor sit amet, consectetur adipiscing.</p></div>
-                    </div>
-                    <div class="evento">
-                        <div class="day"><p class="tcv">22<br>DIC</p></div><div class="info"><p>Fine lezioni</p></div>
-                    </div>
-                    -->
+                    
                 </div>
             </div>
             <div class="calendario">
