MANNAGGIA A DIO E A QUANDO HA CREATO JS

--- a/cal.html
+++ b/cal.html
@@ -118,7 +118,7 @@
                                 <td id="6_6" class="day-ri"></td>
                                 <td id="6_7" class="day-ri"></td>
                             </tr>
-                            <script>buildMonth()</script>
+                            <script>buildMonth();loadPreferiti()</script>
                         </tbody>
                     </table>
                 </div>
