fsondo preferiti svg e html

--- a/cal.html
+++ b/cal.html
@@ -42,7 +42,7 @@
                         <i class="icon-close"></i>
                     </div>
                 </div>
-                <div id="event-container" class="eventi">
+                <div id="event-container" class="eventi vuoto">
                     
                 </div>
             </div>
